--- a/README.org
+++ b/README.org
@@ -12,5 +12,5 @@ Another feature I'd like to have is some kind of automatic backpropagation, so I
 
 * Examples
 -  examples/tensor.lisp - tensor related, mostly from torch
-- examples/ad.lisp - my humble auto gradient/auto backpropagation, copiled from clj-autograd of whilo
+- examples/ad.lisp - my humble auto gradient/auto backpropagation, copied from clj-autograd of whilo
 - dlfs - my following up of the book "Deep Learning from Scratch"
